--- a/azurecosmos/pom.xml
+++ b/azurecosmos/pom.xml
@@ -35,8 +35,8 @@ LICENSE file.
 
   <dependencies>
     <dependency>
-      <groupId>com.microsoft.azure</groupId>
-      <artifactId>azure-documentdb</artifactId>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-cosmos</artifactId>
       <version>${azurecosmos.version}</version>
   </dependency>
   <dependency>
