Implemented insert and delete.

--- a/azurecosmos/conf/azurecosmos.properties
+++ b/azurecosmos/conf/azurecosmos.properties
@@ -34,9 +34,9 @@ azurecosmos.uri = https://ycsb-benchmark.documents.azure.com:443/
 # Value can be true or false.
 #azurecosmos.useGateway = false
 
-# Specify consistency level, values can be Strong, BoundedStaleness, Session or Eventual
-# If not specified, Session will be used by default
-azurecosmos.consistencyLevel = Session
+# Specify consistency level, values can be STRONG, BOUNDED_STALENESS, SESSION, CONSISTENT_PREFIX, or EVENTUAL
+# If not specified, Session will be used by default.
+azurecosmos.consistencyLevel = SESSION
 
 # Specify retry options to use in case of throttled request.
 # If not specified, default values will be used
