Turned on gateway mode

--- a/azurecosmos/conf/azurecosmos.properties
+++ b/azurecosmos/conf/azurecosmos.properties
@@ -36,7 +36,7 @@ azurecosmos.uri = https://ycsb-benchmark.documents.azure.com:443/
 # Specify if connection mode should use gateway as opposed to direct.
 # By default, direct mode will be used, as the performance is generally better.
 # Value can be true or false.
-# azurecosmos.useGateway = false
+azurecosmos.useGateway = true
 
 # Specify consistency level.
 # If not specified, session level will be used by default.
@@ -45,7 +45,7 @@ azurecosmos.uri = https://ycsb-benchmark.documents.azure.com:443/
 
 # Set the maximum number of retries in the case where the request fails due to rate limiting.
 # If not specified, default values will be used.
-# azurecosmos.maxRetryAttemptsOnThrottledRequests = 9
+ azurecosmos.maxRetryAttemptsOnThrottledRequests = 0
 
 # Set the maximum retry duration in seconds.
 # azurecosmos.maxRetryWaitTimeInSeconds = 30
