--- a/azurecosmos/conf/azurecosmos.properties
+++ b/azurecosmos/conf/azurecosmos.properties
@@ -51,7 +51,7 @@
 # azurecosmos.maxRetryWaitTimeInSeconds = 30
 
 # Set the value of the connection pool size, the default is 1000 for gateway and 30 for direct. 
-# azurecosmos.maxConnectionPoolSize = 1000
+ azurecosmos.maxConnectionPoolSize = 64
 
 # Sets the value of the timeout in seconds for an idle connection. After that time, the connection will be automatically closed.
 # The default is 60 seconds.
