Cleaned up code again

--- a/azurecosmos/conf/azurecosmos.properties
+++ b/azurecosmos/conf/azurecosmos.properties
@@ -16,8 +16,8 @@
 # See https://docs.microsoft.com/en-us/azure/cosmos-db/performance-tips-java-sdk-v4-sql for details on some of the options below.
 
 # Azure Cosmos DB host uri (ex: https://p3rf.documents.azure.com:443/) and primary key.
-#azurecosmos.primaryKey = 
-#azurecosmos.uri = 
+# azurecosmos.primaryKey = 
+# azurecosmos.uri = 
 
 # Database to be used, if not specified 'ycsb' will be used.
 # azurecosmos.databaseName = ycsb
@@ -30,6 +30,10 @@
 # Determines if the full stack should be included in the log when an error happens.
 # The default is false to reduce output size.
 # azurecosmos.includeExceptionStackInLog = false
+
+# The value to be appended to the user-agent header.
+# In most cases, you should leave this as "ycsb-4.0.1".
+# azurecosmos.userAgent = ycsb-4.0.1
 
 # CONNECTION OPTIONS
 
@@ -51,7 +55,7 @@
 # azurecosmos.maxRetryWaitTimeInSeconds = 30
 
 # Set the value of the connection pool size, the default is 1000 for gateway and 30 for direct. 
- azurecosmos.maxConnectionPoolSize = 64
+# azurecosmos.maxConnectionPoolSize = 30
 
 # Sets the value of the timeout in seconds for an idle connection. After that time, the connection will be automatically closed.
 # The default is 60 seconds.
