--- a/azurecosmos/conf/azurecosmos.properties
+++ b/azurecosmos/conf/azurecosmos.properties
@@ -68,6 +68,10 @@
 # Default value is 0.
 # azurecosmos.maxDegreeOfParallelism = 0
 
-# Sets the maximum number of items that can be buffered client side duringparallel query execution.
+# Sets the maximum number of items that can be buffered client side during parallel query execution.
 # Default value is 0.
 # azurecosmos.maxBufferedItemCount = 0
+
+# Sets the maximum number of items that can be buffered client side during parallel query execution.
+# Default value is 0.
+# azurecosmos.preferredPageSize = 0
