--- a/azurecosmos/conf/azurecosmos.properties
+++ b/azurecosmos/conf/azurecosmos.properties
@@ -33,7 +33,7 @@
 
 # The value to be appended to the user-agent header.
 # In most cases, you should leave this as "ycsb-4.6.0".
-# azurecosmos.userAgent = ycsb-4.6.0
+azurecosmos.userAgent = ycsb-0.18.0-SNAPSHOT
 
 # CONNECTION OPTIONS
 
